--- a/App.Web/Views/DoctorPole/Followup.cshtml
+++ b/App.Web/Views/DoctorPole/Followup.cshtml
@@ -20,7 +20,7 @@
     @Html.HiddenFor(m => m.DoctorPoleId)
 
 
-<button type="button" class="collapsible">@Model.DoctorsPole.StandingData4.Name  <span style="font-size:11px;"> @Model.DoctorsPole.StaffName (PIN : @Model.DoctorsPole.PIN)</span></button>
+    <button type="button" class="collapsible">@Model.DoctorsPole.StandingData4.Name  <span style="font-size:11px;"> @Model.DoctorsPole.StaffName (PIN : @Model.DoctorsPole.PIN)</span></button>
     <div class="content">
         <table class="table table-striped table-bordered fixed_headers" style="width:100%">
             <tr>
@@ -63,7 +63,7 @@
         </tr>
     </table>
 
-    <h3 style="padding-top:10px; color:#ff6a00">Previous Followups</h3>
+    <h3 style="padding-top:10px; color:#ff6a00">History</h3>
     if (Model.DoctorsPoleVisits.Count > 0)
     {
         foreach (var v in Model.DoctorsPoleVisits)
@@ -82,13 +82,22 @@
                     </tr>
                     <tr>
                         <td>
-                            Fever : @v.IsFever
-                            <br />
-                            Dry cough : @v.IsDryCough
-                            <br />
-                            Sore throat : @v.IsSoreThroat
-                            <br />
-                            Breathlessness : @v.IsBreathing
+                            @if (v.IsFever)
+                            {
+                                <span>Fever</span><br />
+                            }
+                            @if (v.IsDryCough)
+                            {
+                                <span>Dry cough</span><br />
+                            }
+                            @if (v.IsSoreThroat)
+                            {
+                                <span>Sore throat</span><br />
+                            }
+                            @if (v.IsBreathing)
+                            {
+                                <span>Breathlessness</span>
+                            }
                         </td>
                         <td>
                             Others:
@@ -96,16 +105,29 @@
                             @v.OtherSymptoms
                         </td>
                         <td>
-                            Conservative treatment : @v.AdvConTreat
-                            <br />
-                            Quarentine :  @v.AdvQurentine
-                            <br />
-                            Home Isolation : @v.AdvHomeIsolation
-                            <br />
-                            Referred to Hospital : @v.AdvReferHospital
+                            @if (v.AdvConTreat == true)
+                            {
+                                <span>Conservative treatment</span><br />
+                            }
+                            @if (v.AdvQurentine == true)
+                            {
+                                <span>Quarentine</span><br />
+                            }
+                            @if (v.AdvHomeIsolation == true)
+                            {
+                                <span>Home Isolation</span><br />
+                            }
+                            @if (v.AdvReferHospital == true)
+                            {
+                                <span>Referred to Hospital</span>
+                            }
                         </td>
                         <th>
-                            Antibiotic Tahen : @v.IsAntibioticTaken
+                            Antibiotic Tahen : @if (v.IsAntibioticTaken == true)
+                            {<span>Yes</span> }
+                            else
+                            {<span>No</span>}
+
                         </th>
                     </tr>
                     <tr>
@@ -119,47 +141,57 @@
                         </td>
                         <th colspan="2">
                             Co-morbidity for suspected case : @v.CoMorbidities
-                            @*@{var c = v.StandingData1 == null ? "" : v.StandingData1.Name;}
-                            @c*@
                         </th>
                     </tr>
                     <tr>
                         <td>
                             Sample taken date : @v.SampleTakenDate.ToDateString()
-                        </td>
-                        <th>
+                            <br />
                             Test Result :
                             @{var t = v.StandingData2 == null ? "" : v.StandingData2.Name;}
                             @t
-                        </th>
-                        <td colspan="2">
+                            <br />
                             Test Result Date : @v.TestResultDate.ToDateString()
                         </td>
-                    </tr>
-
-                    <tr>
+                        <td>
+                            2nd Sample taken date : @v.SampleTakenDate1.ToDateString()
+                            <br />
+                            2nd Test Result :
+                            @{var t1 = v.StandingData4 == null ? "" : v.StandingData4.Name;}
+                            @t
+                            <br />
+                            2nd Test Result Date : @v.TestResultDate1.ToDateString()
+                        </td>
+                        <td>
+                            3rd Sample taken date : @v.SampleTakenDate2.ToDateString()
+                            <br />
+                            3rd Test Result :
+                            @{var t2 = v.StandingData5 == null ? "" : v.StandingData5.Name;}
+                            @t
+                            <br />
+                            3rd Test Result Date : @v.TestResultDate2.ToDateString()
+                        </td>
                         <td>
                             Admitted at : @{var k = v.StandingData3 == null ? "" : v.StandingData3.Name;}
                             @k
-                        </td>
-                        <td>
-                            Hospital Name : @v.HospitalName
-                        </td>
-                        <td>
+                            <br />
                             Admission Date : @v.AdmissionDate.ToDateString()
-                        </td>
-                        <td>
+                            <br />
                             Discharge Date : @v.DischargeDate.ToDateString()
                         </td>
                     </tr>
 
                     <tr>
                         <td>
+                            Hospital Name : @v.HospitalName
+                        </td>
+                        <td>
                             Attendant Name : @v.AlternateName
                         </td>
-                        <td colspan="3">
+                        <td>
                             Attendant Phone Number : @v.AlternatePhoneNo
                         </td>
+                        <td></td>
                     </tr>
                 </table>
             </div>
@@ -167,7 +199,7 @@
     }
     else
     {
-        <p>No previous follou found</p>
+        <p>No history found</p>
     }
 
     <h3 style="padding-top:10px; color:#ff6a00">Today's Followup</h3>
@@ -215,17 +247,7 @@
                 </th>
             </tr>
             <tr>
-                <th>
-                    Status
-                    @Html.DropDownListFor(model => model.StatusId, Model.StatusList)
-                    @Html.ValidationMessageFor(model => model.StatusId)
-                </th>
-                <th>
-                    Comments
-                    @Html.TextAreaFor(model => model.Comments)
-                    @Html.ValidationMessageFor(model => model.Comments)
-                </th>
-                <th colspan="2">
+                <th colspan="4">
                     Co-morbidity for suspected cases:
                     <br />
                     @for (int i = 0; i < Model.CoMobiList.Count(); i++)
@@ -242,36 +264,50 @@
                     Sample taken date
                     @Html.TextBoxFor(model => model.SampleTakenDate, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
                     @Html.ValidationMessageFor(model => model.SampleTakenDate)
-                </th>
-                <th>
+                    <br />
                     Test Result
                     @Html.DropDownListFor(model => model.TestResultId, Model.TestResultList, "Not Applicable Now")
                     @Html.ValidationMessageFor(model => model.TestResultId)
-                </th>
-                <th colspan="2">
+                    <br />
                     Test Result Date
                     @Html.TextBoxFor(model => model.TestResultDate, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
                     @Html.ValidationMessageFor(model => model.TestResultDate)
                 </th>
-            </tr>
-
-            <tr>
+                <th style="visibility:hidden">
+                    2nd Sample taken date
+                    @Html.TextBoxFor(model => model.SampleTakenDate1, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
+                    @Html.ValidationMessageFor(model => model.SampleTakenDate1)
+                    <br />
+                    2nd Test Result
+                    @Html.DropDownListFor(model => model.TestResultId1, Model.TestResultList, "Not Applicable Now")
+                    @Html.ValidationMessageFor(model => model.TestResultId1)
+                    <br />
+                    2nd Test Result Date
+                    @Html.TextBoxFor(model => model.TestResultDate1, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
+                    @Html.ValidationMessageFor(model => model.TestResultDate1)
+                </th>
+                <th>
+                    3rd Sample taken date
+                    @Html.TextBoxFor(model => model.SampleTakenDate2, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
+                    @Html.ValidationMessageFor(model => model.SampleTakenDate2)
+                    <br />
+                    3rd Test Result
+                    @Html.DropDownListFor(model => model.TestResultId2, Model.TestResultList, "Not Applicable Now")
+                    @Html.ValidationMessageFor(model => model.TestResultId2)
+                    <br />
+                    3rd Test Result Date
+                    @Html.TextBoxFor(model => model.TestResultDate2, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
+                    @Html.ValidationMessageFor(model => model.TestResultDate2)
+                </th>
                 <th>
                     Admitted at
                     @Html.DropDownListFor(model => model.AdmittedTypeId, Model.AdminTypeList, "Not Applicable Now")
                     @Html.ValidationMessageFor(model => model.AdmittedTypeId)
-                </th>
-                <th>
-                    Hospital Name
-                    @Html.TextBoxFor(model => model.HospitalName)
-                    @Html.ValidationMessageFor(model => model.HospitalName)
-                </th>
-                <th>
+                    <br />
                     Admission Date
                     @Html.TextBoxFor(model => model.AdmissionDate, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
                     @Html.ValidationMessageFor(model => model.AdmissionDate)
-                </th>
-                <th>
+                    <br />
                     Discharge Date
                     @Html.TextBoxFor(model => model.DischargeDate, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
                     @Html.ValidationMessageFor(model => model.DischargeDate)
@@ -279,6 +315,11 @@
             </tr>
 
             <tr>
+                <th>
+                    Hospital Name
+                    @Html.TextBoxFor(model => model.HospitalName)
+                    @Html.ValidationMessageFor(model => model.HospitalName)
+                </th>
                 <th>
                     Attendant Name
                     @Html.TextBoxFor(model => model.AlternateName)
@@ -290,17 +331,24 @@
                     @Html.ValidationMessageFor(model => model.AlternatePhoneNo)
                 </th>
                 <th>
+
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    Status
+                    @Html.DropDownListFor(model => model.StatusId, Model.StatusList)
+                    @Html.ValidationMessageFor(model => model.StatusId)
+                </th>
+                <th>
+                    Comments
+                    @Html.TextAreaFor(model => model.Comments)
+                    @Html.ValidationMessageFor(model => model.Comments)
+                </th>
+                <th>
                     Next Followup
-                    <select id="FollowupAfterDays" name="FollowupAfterDays">
-                        <option value="-1">No followup needed</option>
-                        <option value="0">Today</option>
-                        <option value="3">After 3 Days</option>
-                        <option value="5">After 5 Days</option>
-                        <option value="7">After 7 Days</option>
-                        <option value="10">After 10 Days</option>
-                        <option value="12">After 12 Days</option>
-                        <option value="14">After 14 Days</option>
-                    </select>
+                    @Html.DropDownListFor(model => model.FollowupAfterDays, Model.FollowupAfterDaysList, "Please select next follow up days")
+                    @Html.ValidationMessageFor(model => model.FollowupAfterDays)
                 </th>
                 <th>
                     <p> &nbsp; </p>
@@ -341,6 +389,30 @@
             startDate: null
         });
         $('#TestResultDate').datepicker({
+            format: "dd M, yyyy",
+            autoclose: true,
+            endDate: '+0d',
+            startDate: null
+        });
+        $('#SampleTakenDate1').datepicker({
+            format: "dd M, yyyy",
+            autoclose: true,
+            endDate: '+0d',
+            startDate: null
+        });
+        $('#TestResultDate1').datepicker({
+            format: "dd M, yyyy",
+            autoclose: true,
+            endDate: '+0d',
+            startDate: null
+        });
+        $('#SampleTakenDate2').datepicker({
+            format: "dd M, yyyy",
+            autoclose: true,
+            endDate: '+0d',
+            startDate: null
+        });
+        $('#TestResultDate2').datepicker({
             format: "dd M, yyyy",
             autoclose: true,
             endDate: '+0d',
