--- a/App.Web/Views/DoctorPole/FollowupIndex.cshtml
+++ b/App.Web/Views/DoctorPole/FollowupIndex.cshtml
@@ -18,7 +18,7 @@
     <div class="span12">
         <ul class="breadcrumb">
             <li>
-                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> Follow-Up</h2>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> Tele Consultancy</h2>
             </li>
         </ul>
 
