--- a/App.Web/Views/Shared/_LayoutMain.cshtml
+++ b/App.Web/Views/Shared/_LayoutMain.cshtml
@@ -47,10 +47,13 @@
                                         {
                                             <li><a class="simple smronju" href="~/DoctorPole/HrIndex" title="Data entry"><span>HRD Call</span></a></li>
                                         }
-                                        @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role)
-                                            || UserRole.Check("DoctorPool_Suspect", SessionHelper.Role))
+                                        @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role))
                                         {
-                                            <li><a class="simple smronju" href="~/DoctorPole/FollowupIndex" title="Data entry"><span>Followup</span></a></li>
+                                            <li><a class="simple smronju" href="~/DoctorPole/FollowupIndex" title="Data entry"><span>Tele Consultancy</span></a></li>
+                                        }
+                                        @if (UserRole.Check("DoctorPool_Suspect", SessionHelper.Role))
+                                        {
+                                            <li><a class="simple smronju" href="~/DoctorPole/FollowupIndex" title="Data entry"><span>Follow Up</span></a></li>
                                         }
                                         <li><a class="wizard-form smronju" href="~/DoctorPole/ReportIndex" title="HNPP Data"><span>All Profiles</span></a></li>
                                         <li><a class="wizard-form smronju" href="~/DoctorPole/Dashboard" title="HNPP Data"><span>Dashboard</span></a></li>
