--- a/App.Web/Views/Shared/_Header.cshtml
+++ b/App.Web/Views/Shared/_Header.cshtml
@@ -15,6 +15,7 @@
     </div>
     <div class="topbar-dropdowns">
         <div class="dropdown notification-dd">
+            <span class="circular">Circulars</span>
             <span id="spnmessagetop" class="count-badge red corner msg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
 
             <img src="@Url.Content("~/Content/src/images/svg/folder_open.svg")" class="message-svg notification-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" />
@@ -36,6 +37,7 @@
             </div>
         </div>
         <div class="dropdown notification-dd">
+            <span class="activities">Activities</span>
             <span id="spnactivitiestop" class="count-badge green corner dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">4</span>
             <svg class="activity-svg notification-icon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24.5 28.6" style="enable-background:new 0 0 24.5 28.6;" xml:space="preserve">
                     
