--- a/App.Web/Views/DetailSubmission/Index.cshtml
+++ b/App.Web/Views/DetailSubmission/Index.cshtml
@@ -170,17 +170,6 @@
                     </svg>
                 </div>
             </div>
-            @*<div class="dataTables_length" id="gridTable_length">
-                <label>
-                    Records per page
-                    <select name="gridTable_length" aria-controls="gridTable" class="custom-select custom-select-sm form-control form-control-sm">
-                        <option value="10">10</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="100">100</option>
-                    </select>
-                </label>
-            </div>*@
             <div class="dataTables_info" id="data_table_info" role="status" aria-live="polite">
                 Total Records
                 <strong id="iTotalRecords" class="text-bracify">
@@ -192,13 +181,6 @@
             <div class="table-filter-nav">
                 <div class="filter-item">
                     <label for="info_source">তথ্যের উৎস</label>
-                    @*<select class="searchable-dropdown form-control select2-hidden-accessible" id="info_source" data-select2-id="info_source" tabindex="-1" aria-hidden="true">
-                        <option data-select2-id="2">Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                        <option>Communicable diseases</option>
-                    </select>*@
                     @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Sources", new { @class = "searchable-dropdown form-control" })
 
                 </div>
@@ -407,8 +389,9 @@
             , addPost  //additional parameters at query string
             , btns   //buttons are at these columns
             , true
-            );
-
+        );
+        $(".sidebar-item").removeClass("active");
+        $("#probabal_patient").addClass("active");
         });
     </script>
 }
