--- a/App.Web/Views/Role/Index.cshtml
+++ b/App.Web/Views/Role/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+﻿@using AppProj.Web.Helpers;
+@using AppProj.Web;
+@model AppProj.Web.Models.SearchModel
+@{
+    Layout = "~/Views/Shared/_LayoutBrac.cshtml";
     var ajaxOpt = new AjaxOptions
     {
-        HttpMethod = "GET",
+        HttpMethod = "POST",
         UpdateTargetId = "dialog1Body",
         InsertionMode = InsertionMode.Replace,
         OnSuccess = "openDialog1('Create New Role')",
@@ -12,47 +15,78 @@
 }
 
 
-<div class="row-fluid">
-    <div class="span12">
-        <ul class="breadcrumb">
-            <li>
-                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> Roles & Rights Management</h2>
-            </li>
-        </ul>
 
-    </div>
+
+<div class="page-header">
+    <h2>Roles & Rights Management</h2>
+
 </div>
-<div class="row-fluid">
-    <div>
-        @Ajax.ActionLink("Add New Role", "Create", "Role", ajaxOpt, new { @class = "btn btn-primary pull-right" })
-    </div>
-    <div class="pull-right" style="margin-right:10px;">
-        <a href="#" onclick="ReSearch()" class="btn pull-right"><i class="icon icon-search"></i></a>
-        @Html.TextBox("txtSearch", null, new { @class = "pull-right", @placeholder = "search text" })
-        <script type="text/javascript">
-            function ReSearch() {
-                $('#gridTable').dataTable().fnDraw();
+
+<div class="table-responsive">
+    <div id="data_table_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
+        <div class="dt_top">
+            <div class="dt_toolbar">
+                <div class="dt_toolbar">
+                    <svg class="toggle-trigger" xmlns="http://www.w3.org/2000/svg" width="22" height="20.2" viewBox="0 0 22 20.2">
+                        <g id="filter" transform="translate(-1 -2.5)" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M21,4.5H3l7.2,8.514V18.9l3.6,1.8V13.014Z" stroke="none"></path>
+                            <path d="M 3.000003814697266 4.500005722045898 L 10.19999313354492 13.01399612426758 L 10.19999313354492 18.89999771118164 L 13.79999351501465 20.69998550415039 L 13.79999351501465 13.01399612426758 L 20.9999828338623 4.500005722045898 L 3.000003814697266 4.500005722045898 M 3.000003814697266 2.500005722045898 L 20.9999828338623 2.500005722045898 C 21.77863311767578 2.500005722045898 22.48650360107422 2.951927185058594 22.81422424316406 3.658256530761719 C 23.14193344116211 4.36457633972168 23.0299129486084 5.196907043457031 22.52712249755859 5.79145622253418 L 15.79999351501465 13.74628925323486 L 15.79999351501465 20.69998550415039 C 15.79999351501465 21.39313697814941 15.44109344482422 22.0368766784668 14.85145378112793 22.40128707885742 C 14.53029537200928 22.59977340698242 14.1655740737915 22.69998741149902 13.79989337921143 22.69998741149902 C 13.49420356750488 22.69998741149902 13.18785953521729 22.6299877166748 12.90557289123535 22.48884582519531 L 9.305573463439941 20.68885612487793 C 8.628003120422363 20.35006713867188 8.199993133544922 19.65754699707031 8.199993133544922 18.89999771118164 L 8.199993133544922 13.74628925323486 L 1.472864151000977 5.79145622253418 C 0.9700736999511719 5.196907043457031 0.8580532073974609 4.36457633972168 1.185762405395508 3.658256530761719 C 1.513483047485352 2.951927185058594 2.221353530883789 2.500005722045898 3.000003814697266 2.500005722045898 Z" stroke="none" fill="#c9d600"></path>
+                        </g>
+                    </svg>
+                    <span class="toggle-trigger">Search By Filter</span>
+                    <svg class="dt-carret toggle-trigger" xmlns="http://www.w3.org/2000/svg" width="13.248" height="6.624" viewBox="0 0 13.248 6.624">
+                        <path d="M10.5,15l6.624,6.624L23.748,15Z" transform="translate(-10.5 -15)" fill="#D10D74"></path>
+                    </svg>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="tnav w-25">
+            <div class="table-filter-nav">
+
+
+                <div class="filter-item">
+                    <label for="info_source">User Nane</label>
+                    @Html.TextBox("txtSearch", null, new { @class = "input-group form-control input active", @placeholder = "Search" })
+                </div>
+                <div class="filter-item">
+                    <button id="SearchButton" class="btn btn-bracify search">
+                        <span>Search</span>
+                        <img src="@Url.Content("~/Content/src/images/svg/tabular-data/search.svg")" alt="Search">
+                    </button>
+                </div>
+                @*<input type="text" name="search" placeholder="">
+                <button id="SearchButton" class="btn btn-bracify search col-*-4" ">
+                    <span>Search</span>
+                    <img src="@Url.Content("~/Content/src/images/svg/tabular-data/search.svg")" alt="Search">
+                </button>*@
+            </div>
+        </div>
+        <div class="custom-add">
+            @if (UserRole.Check("DETAIL", SessionHelper.Role))
+            {
+                @Ajax.ActionLink("Add New Role", "Create", "Role", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
-        </script>
+        </div>
+        <table id="gridTable" class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>
+                        Role
+                    </th>
+                    <th>
+                        Default Page
+                    </th>
+                    <th>
+                        Status
+                    </th>
+                    <th style="width: 10%"></th>
+                </tr>
+            </thead>
+        </table>
     </div>
 </div>
-
-<table id="gridTable" class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>
-                Role
-            </th>
-            <th>
-                Default Page
-            </th>
-            <th>
-                Status
-            </th>
-            <th style="width: 10%"></th>
-        </tr>
-    </thead>
-</table>
 
 @section scripts{
     <script type="text/javascript">
@@ -75,3 +109,4 @@
         });
     </script>
 }
+
