--- a/App.Web/Views/Standing/Index.cshtml
+++ b/App.Web/Views/Standing/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+﻿@using AppProj.Web.Helpers;
+@using AppProj.Web;
+@model AppProj.Web.Models.SearchModel
+@{
+    Layout = "~/Views/Shared/_LayoutBrac.cshtml";
     var ajaxOpt = new AjaxOptions
     {
-        HttpMethod = "GET",
+        HttpMethod = "POST",
         UpdateTargetId = "dialog1Body",
         InsertionMode = InsertionMode.Replace,
         OnSuccess = "openDialog1('Add/Edit')",
@@ -11,42 +14,57 @@
     };
 }
 
+<div class="page-header">
+    <h2>List of @ViewBag.Title</h2>
 
-<div class="row-fluid">
-    <div class="span12">
-        <ul class="breadcrumb">
-            <li>
-                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> List of @ViewBag.Title</h2>
-            </li>
-        </ul>
-
-    </div>
-</div>
-<div class="row-fluid">
-    <div>
-        @Ajax.ActionLink("Add New", "Create", "Standing", ajaxOpt, new { @class = "btn btn-primary pull-right" })
-    </div>
 </div>
 
-<table id="gridTable" class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>
-                @ViewBag.Title
-            </th>
-            @*<th>
-                    Details
-                </th>*@
-            <th>
-                Status
-            </th>
-            <th style="width: 10%"></th>
-        </tr>
-    </thead>
-</table>
+<div class="table-responsive custom-action">
+    <div id="data_table_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
+        <div class="dt_top">
+            <div class="dataTables_info" id="data_table_info" role="status" aria-live="polite">
+                Total Records
+                <strong id="iTotalRecords" class="text-bracify">
+
+                </strong>
+            </div>
+        </div>
+        
+
+        <div class="custom-add">
+            @if (UserRole.Check("DETAIL", SessionHelper.Role))
+            {
+                @Ajax.ActionLink("Add New", "Create", "Standing", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
+            }
+        </div>
+
+        <table id="gridTable" class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>
+                        @ViewBag.Title
+                    </th>
+                    @*<th>
+                        Details
+                    </th>*@
+                    <th>
+                        Status
+                    </th>
+                    <th style="width: 10%"></th>
+                </tr>
+            </thead>
+        </table>
+
+    </div>
+
+</div>
+
+
+
+
 
 @section scripts{
-    <script type="text/javascript">
+<script type="text/javascript">
         $(document).ready(function () {
 
             var btns = {
@@ -64,5 +82,5 @@
             );
 
         });
-    </script>
+</script>
 }
