--- a/App.Web/Views/DistrictSubmission/IndexReleif.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexReleif.cshtml
@@ -190,7 +190,7 @@
         <div class="tnav" style="">
             <div class="table-filter-nav">
                 <div class="filter-item">
-                    <label for="info_source">তথ্যের উৎস</label>
+                    <label for="info_source"> বিভাগ</label>
                     @*<select class="searchable-dropdown form-control select2-hidden-accessible" id="info_source" data-select2-id="info_source" tabindex="-1" aria-hidden="true">
                             <option data-select2-id="2">Communicable diseases</option>
                             <option>Communicable diseases</option>
