#Leftmenu Active Button and JS

--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -264,7 +264,8 @@
             , btns   //buttons are at these columns
             , true
         );
-
+        $(".sidebar-item").removeClass("active");
+        $("#Data_en").addClass("active");
         });
     </script>
 }
