--- a/App.Web/Views/BepSubmission/IndexItem.cshtml
+++ b/App.Web/Views/BepSubmission/IndexItem.cshtml
@@ -356,7 +356,8 @@
             , true
         );
 
-
+        $(".sidebar-item").removeClass("active");
+        $("#Data_total").addClass("active");
         });
     </script>
 }
