--- a/App.Web/Views/DetailSubmission/IndexApp.cshtml
+++ b/App.Web/Views/DetailSubmission/IndexApp.cshtml
@@ -361,7 +361,8 @@
             , btns   //buttons are at these columns
             , true
             );
-
+        $(".sidebar-item").removeClass("active");
+        $("#Covid_Def").addClass("active");
         });
     </script>
 }
