--- a/App.Web/Views/HnppSubmission/Index.cshtml
+++ b/App.Web/Views/HnppSubmission/Index.cshtml
@@ -284,7 +284,8 @@
             , btns   //buttons are at these columns
             , true
         );
-
+        $(".sidebar-item").removeClass("active");
+        $("#b_health").addClass("active");
         });
     </script>
 }
