--- a/App.Web/Views/Role/Index.cshtml
+++ b/App.Web/Views/Role/Index.cshtml
@@ -105,7 +105,8 @@
             , btns   //buttons are at these columns
             , true
             );
-
+            $(".sidebar-item").removeClass("active");
+            $("#Role").addClass("active");
         });
     </script>
 }
