--- a/App.Web/Views/Standing/DistQuestion.cshtml
+++ b/App.Web/Views/Standing/DistQuestion.cshtml
@@ -77,7 +77,8 @@
             , btns   //buttons are at these columns
             , true
             );
-
+            $(".sidebar-item").removeClass("active");
+            $("#BDC_Qus").addClass("active");
         });
     </script>
 }
