--- a/App.Web/Views/UserProfile/Index.cshtml
+++ b/App.Web/Views/UserProfile/Index.cshtml
@@ -109,6 +109,8 @@
             , btns   //buttons are at these columns
             , true
             );
+            $(".sidebar-item").removeClass("active");
+            $("#User").addClass("active");
         });
 
     </script>
