--- a/App.Web/Views/BepSubmission/IndexCount.cshtml
+++ b/App.Web/Views/BepSubmission/IndexCount.cshtml
@@ -368,7 +368,8 @@
             , true
         );
 
-
+        $(".sidebar-item").removeClass("active");
+        $("#Data_des").addClass("active");
         });
     </script>
 }
