--- a/App.Web/Views/DistrictSubmission/Index.cshtml
+++ b/App.Web/Views/DistrictSubmission/Index.cshtml
@@ -382,7 +382,8 @@
             , btns   //buttons are at these columns
             , true
             );
-
+        $(".sidebar-item").removeClass("active");
+        $("#Destrict_Speach").addClass("active");
         });
             </script>
         }
