--- a/App.Web/Views/DistrictSubmission/IndexBrac.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexBrac.cshtml
@@ -368,7 +368,8 @@
             , btns   //buttons are at these columns
             , true
             );
-
+        $(".sidebar-item").removeClass("active");
+        $("#b_emp").addClass("active");
         });
             </script>
         }
