--- a/App.Web/Views/Shared/_leftmenu.cshtml
+++ b/App.Web/Views/Shared/_leftmenu.cshtml
@@ -15,28 +15,28 @@
         <span>সম্ভাব্য রোগী</span>
     </a>
 
-    <a class="sidebar-item" href="~/HnppSubmission/Index">
+    <a id="b_health"  class="sidebar-item" href="~/HnppSubmission/Index">
         <svg xmlns="http://www.w3.org/2000/svg" width="19.527" height="19.529" viewBox="0 0 19.527 19.529"> <g id="brac-health" transform="translate(-9.562 -9.561)"> <path id="Path_84" data-name="Path 84" d="M29.226,10.995c-.018-.016-.037-.029-.055-.045.035.031.07.063.1.095C29.258,11.028,29.243,11.011,29.226,10.995Z" transform="translate(-7.207 -0.511)" fill="#b9b9b9" /> <path id="Path_85" data-name="Path 85" d="M9.566,25.251c0,.019,0,.038,0,.058,0-.036,0-.071.005-.108C9.572,25.218,9.567,25.234,9.566,25.251Z" transform="translate(-0.001 -5.749)" fill="#b9b9b9" /> <path id="Path_86" data-name="Path 86" d="M24.921,9.585h-.005c.044,0,.09,0,.134-.006C25.007,9.582,24.965,9.58,24.921,9.585Z" transform="translate(-5.643 -0.007)" fill="#b9b9b9" /> <path id="Path_87" data-name="Path 87" d="M16.064,22.58V19.627a3.568,3.568,0,0,1,3.2-3.544,3.471,3.471,0,0,1,.365-.019h3.558V13.118h0a3.435,3.435,0,0,0-.02-.372v0a3.536,3.536,0,0,0-.283-1.058c-.005-.011-.011-.021-.015-.032q-.066-.147-.145-.286l-.039-.064c-.047-.08-.1-.158-.151-.233-.021-.03-.043-.059-.065-.088-.049-.065-.1-.128-.152-.19-.028-.033-.058-.065-.088-.1-.051-.055-.1-.109-.159-.161-.034-.032-.069-.064-.1-.095q-.081-.07-.165-.135c-.042-.033-.085-.066-.129-.1s-.1-.065-.145-.1-.111-.071-.169-.1c-.037-.02-.075-.039-.113-.058-.07-.035-.14-.071-.213-.1-.027-.011-.054-.021-.082-.032-.083-.034-.166-.066-.252-.092l-.068-.019c-.09-.026-.181-.051-.274-.07-.03-.006-.061-.009-.091-.015-.085-.016-.171-.031-.259-.04-.052-.006-.106-.006-.159-.009s-.134-.009-.2-.01h-.014c-.075,0-.147.006-.221.011-.044,0-.09,0-.134.006a3.556,3.556,0,0,0-3.2,3.539v2.954H13.119c-.065,0-.128.006-.192.009s-.11,0-.164.008-.117.017-.175.026-.118.015-.176.027-.1.025-.152.038-.126.029-.188.048-.094.034-.14.051c-.063.022-.126.042-.187.068s-.1.048-.152.072-.107.048-.158.076c-.071.039-.139.082-.206.124-.028.018-.059.034-.087.052a3.58,3.58,0,0,0-.959.951l-.01.013a3.511,3.511,0,0,0-.3.545c-.007.015-.015.029-.021.044a3.522,3.522,0,0,0-.187.572c-.006.022-.012.044-.017.066a3.636,3.636,0,0,0-.076.591c0,.036,0,.071-.005.108s0,.044,0,.067c0,.046.005.09.007.135s0,.086.006.128a3.554,3.554,0,0,0,3.544,3.292h2.945Z" fill="#b9b9b9" /> <path id="Path_88" data-name="Path 88" d="M20.807,34.057a2.953,2.953,0,1,0,5.906,0V31.111H20.807Z" transform="translate(-4.133 -7.921)" fill="#b9b9b9" /> <path id="Path_89" data-name="Path 89" d="M30.27,20.808H23.76a2.956,2.956,0,0,0-2.953,2.953v2.953H30.27a2.953,2.953,0,0,0,0-5.906ZM24.6,24.364a.6.6,0,1,1,.6-.6A.6.6,0,0,1,24.6,24.364Zm2.413,0a.6.6,0,1,1,.6-.6A.6.6,0,0,1,27.016,24.364Zm2.413,0a.6.6,0,1,1,.6-.6A.6.6,0,0,1,29.429,24.364Z" transform="translate(-4.133 -4.134)" fill="#b9b9b9" /> </g></svg>
         <span>ব্র্যাক হেলথ</span>
     </a>
 
 
-    <div class="sidebar-item" data-toggle="collapse" data-target="#program_data">
+    <div  class="sidebar-item" data-toggle="collapse" data-target="#program_data">
         <div class="parent-sidebar-item">
             <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
             <span>প্রোগ্রাম ডাটা</span>
         </div>
         <div class="collapse sidebar-collapse-wrapper" id="program_data">
-            <a class="sidebar-item" href="~/BepSubmission/Index">
+            <a id="Data_en" class="sidebar-item" href="~/BepSubmission/Index">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
                 <span>ডাটা এন্ট্রি</span>
             </a>
-            <a class="sidebar-item" href="~/BepSubmission/IndexItem">
+            <a id="Data_total" class="sidebar-item" href="~/BepSubmission/IndexItem">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
                 <span>মোট তথ্য</span>
             </a>
 
-            <a class="sidebar-item" href="~/BepSubmission/IndexCount">
+            <a id="Data_des" class="sidebar-item" href="~/BepSubmission/IndexCount">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
                 <span>বিস্তারিত তথ্য</span>
             </a>
@@ -50,19 +50,19 @@
             <span>বি.ডি.সি. তথ্য</span>
         </div>
         <div class="collapse sidebar-collapse-wrapper" id="bdc_info">
-            <a class="sidebar-item" href="~/DistrictSubmission/Index">
+            <a id="Destrict_Speach" class="sidebar-item" href="~/DistrictSubmission/Index">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>জেলার মন্তব্য</span>
             </a>
-            <a class="sidebar-item" href="~/DistrictSubmission/IndexReleif">
+            <a id="Dis_daily" class="sidebar-item" href="~/DistrictSubmission/IndexReleif">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>জেলার প্রতিদিনের তথ্য</span>
             </a>
-            <a class="sidebar-item" href="~/DistrictSubmission/IndexBrac">
+            <a id="b_emp" class="sidebar-item" href="~/DistrictSubmission/IndexBrac">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>ব্র্যাক কর্মীদের তথ্য</span>
             </a>
-            <a class="sidebar-item" href="~/DistrictSubmission/IndexSum">
+            <a id="Dis_Cur"class="sidebar-item" href="~/DistrictSubmission/IndexSum">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>জেলার বর্তমান অবস্থা</span>
             </a>
@@ -74,7 +74,7 @@
 
 
    
-    <a class="sidebar-item" href="~/DetailSubmission/IndexApp">
+    <a id="Covid_Def" class="sidebar-item" href="~/DetailSubmission/IndexApp">
         <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
         <span>করোনারোধ</span>
     </a>
@@ -85,39 +85,39 @@
             <span>Standing Data</span>
         </div>
         <div class="collapse sidebar-collapse-wrapper" id="dataentry">
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.TreeMessage">
+            <a id="Cov_cer" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.TreeMessage">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>COVID Circular</span>
             </a>
 
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.Activities">
+            <a id="activeties" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.Activities">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Activities</span>
             </a>
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.Programs">
+            <a id="prog" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.Programs">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Programs</span>
             </a>
 
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.HowProgramsAffected">
+            <a id="Imp_aef" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.HowProgramsAffected">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Impacted/Affected</span>
             </a>
 
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.CommunicationMaterial">
+            <a id="Com_mat" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.CommunicationMaterial">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Comm Materials</span>
             </a>
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.CommunicationChannel">
+            <a  id="Com_chal" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.CommunicationChannel">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Comm Channels</span>
             </a>
 
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.MaterialsOrItems">
+            <a id="Mats" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.MaterialsOrItems">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Materials</span>
             </a>
-            <a class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.RestrictionsOnProgramImplementation">
+            <a id="Res" class="sidebar-item" href="~/Standing/Index/@StandingDataTypes.RestrictionsOnProgramImplementation">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Restrictions</span>
             </a>
@@ -125,7 +125,7 @@
     </div>
 
 
-    <a class="sidebar-item" href="~/Standing/DistQuestion">
+    <a id="BDC_Qus" class="sidebar-item" href="~/Standing/DistQuestion">
         <svg xmlns="http://www.w3.org/2000/svg" width="19.743" height="19.693" viewBox="0 0 19.743 19.693"> <path id="program-data" d="M13.859,3.075V6.066A6.905,6.905,0,0,1,19.781,12.9a7.032,7.032,0,0,1-.474,2.507l2.567,1.51a9.749,9.749,0,0,0,.869-4.018,9.877,9.877,0,0,0-8.884-9.822Zm-.987,16.732a6.906,6.906,0,0,1-.987-13.741V3.075a9.871,9.871,0,1,0,8.934,15.656l-2.567-1.51A6.861,6.861,0,0,1,12.871,19.807Z" transform="translate(-3 -3.075)" fill="#b9b9b9" /></svg>
         <span>BDC Questions</span>
     </a>
@@ -136,11 +136,11 @@
             <span>অ্যাডমিনিস্ট্রেশন</span>
         </div>
         <div class="collapse sidebar-collapse-wrapper" id="admin">
-            <a class="sidebar-item" href="~/UserProfile/Index">
+            <a id="User" class="sidebar-item" href="~/UserProfile/Index">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Users</span>
             </a>
-            <a class="sidebar-item" href="~/Role/Index">
+            <a id="Role" class="sidebar-item" href="~/Role/Index">
                 <svg xmlns="http://www.w3.org/2000/svg" width="19.766" height="19.766" viewBox="0 0 19.766 19.766"> <path id="bdc-info" d="M11.895,17.824h1.977v-5.93H11.895ZM12.883,3a9.883,9.883,0,1,0,9.883,9.883A9.887,9.887,0,0,0,12.883,3Zm0,17.789a7.906,7.906,0,1,1,7.906-7.906A7.917,7.917,0,0,1,12.883,20.789ZM11.895,9.918h1.977V7.941H11.895Z" transform="translate(-3 -3)" fill="#b9b9b9" /></svg>
                 <span>Roles</span>
             </a>
