--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -258,7 +258,7 @@
             , btns   //buttons are at these columns
             , true
         );
-
+        $("#program_data").css("display","block")
         });
     </script>
 }
