--- a/App.Web/Views/SummerySubmission/Index.cshtml
+++ b/App.Web/Views/SummerySubmission/Index.cshtml
@@ -233,7 +233,7 @@
             {
                 @Ajax.ActionLink("নতুন তথ্য প্রদান", "CreateMulti", "SummerySubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
-            <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
+            <table id="gridTable" class="table table-borderless table-striped header-table table-alt fixed_headers">
                 <thead class="thead-yellow">
                     <tr>
                         <th>
@@ -276,7 +276,7 @@
 
 
     </div>
-
+</div>
 
 
 
