--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -17,7 +17,7 @@
 
 
 <div class="page-header">
-    <h2>ডাটা এন্ট্রি</h2>
+    <h2>প্রোগ্রাম ডাটা-ডাটা এন্ট্রি</h2>
 
 
     
@@ -260,6 +260,9 @@
         );
         $(".sidebar-item").removeClass("active");
         $("#Data_en").addClass("active");
+        $("#tebular").addClass("active");
+        $("#program_data").css("display","block");
+
         });
     </script>
 }
