--- a/App.Web/Views/DetailSubmission/Index.cshtml
+++ b/App.Web/Views/DetailSubmission/Index.cshtml
@@ -392,6 +392,9 @@
         );
         $(".sidebar-item").removeClass("active");
         $("#probabal_patient").addClass("active");
+        $("#tebular").addClass("active");
+
+        
         });
     </script>
 }
