--- a/App.Web/Views/DetailSubmission/IndexApp.cshtml
+++ b/App.Web/Views/DetailSubmission/IndexApp.cshtml
@@ -363,6 +363,7 @@
             );
         $(".sidebar-item").removeClass("active");
         $("#Covid_Def").addClass("active");
+        $("#tebular").addClass("active");
         });
     </script>
 }
