--- a/App.Web/Views/Role/Index.cshtml
+++ b/App.Web/Views/Role/Index.cshtml
@@ -107,6 +107,8 @@
             );
             $(".sidebar-item").removeClass("active");
             $("#Role").addClass("active");
+            $("#tebular").addClass("active");
+            $("#admin").css("display", "block"); 
         });
     </script>
 }
