--- a/App.Web/Views/Standing/DistQuestion.cshtml
+++ b/App.Web/Views/Standing/DistQuestion.cshtml
@@ -79,6 +79,7 @@
             );
             $(".sidebar-item").removeClass("active");
             $("#BDC_Qus").addClass("active");
+            $("#tebular").addClass("active");
         });
     </script>
 }
