--- a/App.Web/Views/SummerySubmission/Index.cshtml
+++ b/App.Web/Views/SummerySubmission/Index.cshtml
@@ -358,7 +358,7 @@
             , btns   //buttons are at these columns
             , true
             );
-
+        $("#tebular").addClass("active");
         });
     </script>
 }
