--- a/App.Web/Views/BepSubmission/IndexItem.cshtml
+++ b/App.Web/Views/BepSubmission/IndexItem.cshtml
@@ -17,7 +17,7 @@
 
 
 <div class="page-header">
-    <h2>মোট তথ্য</h2>
+    <h2>প্রোগ্রাম ডাটা-মোট তথ্য</h2>
 
  
     <div class="btn-group" role="group" aria-label="Basic example">
@@ -358,6 +358,8 @@
 
         $(".sidebar-item").removeClass("active");
         $("#Data_total").addClass("active");
+        $("#tebular").addClass("active");
+        $("#program_data").css("display", "block");
         });
     </script>
 }
