--- a/App.Web/Views/DistrictSubmission/Index.cshtml
+++ b/App.Web/Views/DistrictSubmission/Index.cshtml
@@ -137,7 +137,7 @@
 
 
 <div class="page-header">
-    <h2>জেলার মন্তব্য</h2>
+    <h2>বি.ডি.সি. তথ্য-জেলার মন্তব্য</h2>
     <div class="btn-group" role="group" aria-label="Basic example">
         <a id="exp" href="#" class="btn btn-blank btn-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="13.425" height="11.935" viewBox="0 0 13.425 11.935"> <path id="export" d="M8.951,2.842a.558.558,0,0,0-.163-.394L6.506.163A.559.559,0,0,0,6.11,0H5.967V2.984H8.951ZM13.31,7.18,11.079,4.932a.374.374,0,0,0-.639.263V6.713H8.949V8.205h1.492v1.52a.374.374,0,0,0,.639.263L13.31,7.739A.4.4,0,0,0,13.31,7.18Zm-8.834.653V7.086a.374.374,0,0,1,.373-.373h4.1V3.73H5.781a.561.561,0,0,1-.559-.559V0H.559A.558.558,0,0,0,0,.559V11.375a.558.558,0,0,0,.559.559H8.392a.558.558,0,0,0,.559-.559V8.205h-4.1A.374.374,0,0,1,4.476,7.832Z" fill="#d10d74" /></svg>
@@ -389,6 +389,8 @@
             );
         $(".sidebar-item").removeClass("active");
         $("#Destrict_Speach").addClass("active");
+        $("#tebular").addClass("active");
+        $("#bdc_info").css("display", "block");
         });
             </script>
         }
