--- a/App.Web/Views/HnppSubmission/Index.cshtml
+++ b/App.Web/Views/HnppSubmission/Index.cshtml
@@ -123,18 +123,18 @@
             }
         </div>
         <table id="gridTable" class="table table-borderless table-striped header-table table-alt">
-            <thead class="thead-yellow">
-                <tr>
+            <thead class="thead-yellow" style="border:solid">
+                <tr >
                     <th rowspan="2">
                         জেলা
                     </th>
                     <th rowspan="2">
                         উপজেলা
                     </th>
-                    <th rowspan="2">
+                    <th rowspan="2"  >
                         তারিখ
                     </th>
-                    <th colspan="5" style="text-align:center;">
+                    <th colspan="5" style="text-align:center;  " >
                         সচেতনতা কাউন্সেলিং
                     </th>
                     <th rowspan="2">
@@ -286,6 +286,7 @@
         );
         $(".sidebar-item").removeClass("active");
         $("#b_health").addClass("active");
+        $("#tebular").addClass("active");
         });
     </script>
 }
