--- a/App.Web/Views/UserProfile/Index.cshtml
+++ b/App.Web/Views/UserProfile/Index.cshtml
@@ -111,6 +111,7 @@
             );
             $(".sidebar-item").removeClass("active");
             $("#User").addClass("active");
+            $("#tebular").addClass("active"); $("#admin").css("display", "block"); 
         });
 
     </script>
