solve the issues

--- a/App.Web/Views/DistrictSubmission/Index.cshtml
+++ b/App.Web/Views/DistrictSubmission/Index.cshtml
@@ -197,7 +197,7 @@
                         <option>Communicable diseases</option>
                         <option>Communicable diseases</option>
                     </select>*@
-                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Sources", new { @class = "searchable-dropdown form-control" })
+                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Divisions", new { @class = "searchable-dropdown form-control" })
 
                 </div>
 
