--- a/App.Web/Views/Main/Index.cshtml
+++ b/App.Web/Views/Main/Index.cshtml
@@ -51,7 +51,9 @@
 
 
         });
-
+        $(".sidebar-item").removeClass("active");
+        $("#my_helth").addClass("active");
+        $("#tebular").addClass("active");
 
 
     </script>
