--- a/App.Web/Views/SummerySubmission/Index.cshtml
+++ b/App.Web/Views/SummerySubmission/Index.cshtml
@@ -357,7 +357,9 @@
             , addPost  //additional parameters at query string
             , btns   //buttons are at these columns
             , true
-            );
+        );
+        $(".sidebar-item").removeClass("active");
+        $("#total_survey").addClass("active");
         $("#tebular").addClass("active");
         });
     </script>
