--- a/App.Web/Content/css/brac/bootstrap-legacy.css
+++ b/App.Web/Content/css/brac/bootstrap-legacy.css
@@ -74,7 +74,8 @@
 
 .modal-body {
     position: relative;
-    max-height: 400px;
+    max-height: 85%;
+    height: auto;
     padding: 15px;
     overflow: auto;
 }
